# vertaler

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  main.cpp  scanner.cpp  scanner.h  token.cpp  token.h
